--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8"/>
 
-    <link rel="stylesheet" type="text/css" charset="utf-8" media="screen" href="index.css" />
+    <link rel="stylesheet" type="text/css" charset="utf-8" media="screen" href="dist/index.css" />
 
-    <script type="text/javascript" src="index.js" charset="utf-8" > </script>
+    <script type="text/javascript" src="dist/index.js" charset="utf-8" > </script>
 
   </head>
   <body>
@@ -43,11 +43,16 @@
         <input type="text" id="primary" autofocus autocomplete="on" placeholder="?">
       </div>
 
-      <a class="translatable" href="#result-line0" id="scroll-to" data-i10n-id="page:scroll-to"></a> <input type="number" id="scroll-input" placeholder="1" min="1">
+      <div id="page-controls">
 
-      <select id="i10n-selection">
+        <a class="translatable" href="#result-line0" id="scroll-to" data-i10n-id="page:scroll-to"></a> <input type="number" id="scroll-input" placeholder="1" min="1">
 
-      </select>
+        <select id="i10n-selection">
+
+        </select>
+
+      </div>
+
     </div>
   </body>
 </html>
