--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8"/>
 
-    <link rel="stylesheet" type="text/css" charset="utf-8" media="screen" href="dist/index.css" />
+    <link rel="stylesheet" type="text/css" charset="utf-8" media="screen" href="dist/screen.css" />
+    <link rel="stylesheet" type="text/css" charset="utf-8" media="print" href="dist/print.css" />
 
     <script async data-main="dist/main" src="dist/require.js" type="text/javascript" charset="utf-8" > </script>
-
   </head>
   <body>
     <div id="grid-root">
