--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="grid-item" id="cell-prefs-top">
 
-        <a class="i18n-able" href="javascript:void(0);" id="prefs-visibility" data-i18n-id="page:prefs-visibility"></a>
+        <a class="i18n-able" href="#" id="prefs-visibility" data-i18n-id="page:prefs-visibility"></a>
 
       </div>
 
@@ -67,27 +67,27 @@
         <div id="prefs-controls-sub">
 
           <div class="one-pref">
-            <label class="i18n-able" data-i18n-id="page:prefs-i18n-label"></label>
+            <label class="i18n-able" for="i18n-selection" data-i18n-id="page:prefs-i18n-label"></label>
 
             <select id="i18n-selection"> </select>
           </div>
 
           <div class="one-pref">
-            <label class="i18n-able" data-i18n-id="page:prefs-telemetry-label"></label>
+            <label class="i18n-able" for="prefs-telemetry" data-i18n-id="page:prefs-telemetry-label"></label>
 
-            <input type="checkbox" id="prefs-telemetry" />
+            <input type="checkbox" id="prefs-telemetry" checked="true"/>
           </div>
 
           <div class="one-pref">
-            <label class="i18n-able" data-i18n-id="page:prefs-use-localstorage-label"></label>
+            <label class="i18n-able" for="prefs-use-localstorage" data-i18n-id="page:prefs-use-localstorage-label"></label>
 
-            <input type="checkbox" id="prefs-use-localstorage"/>
+            <input type="checkbox" id="prefs-use-localstorage" checked="true"/>
           </div>
 
           <div class="one-pref prefs-bottom">
-            <a class="i18n-able" href="javascript:void(0);" id="prefs-save" data-i18n-id="page:prefs-save"></a>
+            <a class="i18n-able" href="#" id="prefs-save" data-i18n-id="page:prefs-save"></a>
 
-            <a class="i18n-able" href="javascript:void(0);" id="prefs-reset" data-i18n-id="page:prefs-reset"></a>
+            <a class="i18n-able" href="#" id="prefs-reset" data-i18n-id="page:prefs-reset"></a>
           </div>
 
         </div>
