--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="grid-item" id="cell-prefs-top">
 
-        <a class="i18n-able" href="#" id="prefs-visibility" data-i18n-id="page:prefs-visibility"></a>
+        <button class="i18n-able" href="#" id="prefs-visibility" data-i18n-id="page:prefs-visibility"></button>
 
       </div>
 
@@ -69,7 +69,7 @@
           <div class="one-pref">
             <label class="i18n-able" for="i18n-selection" data-i18n-id="page:prefs-i18n-label"></label>
 
-            <select id="i18n-selection"> </select>
+            <select id="prefs-i18n"> </select>
           </div>
 
           <div class="one-pref">
@@ -85,9 +85,13 @@
           </div>
 
           <div class="one-pref prefs-bottom">
-            <a class="i18n-able" href="#" id="prefs-save" data-i18n-id="page:prefs-save"></a>
+            <button class="i18n-able" href="#" id="prefs-save" data-i18n-id="page:prefs-save"></button>
 
-            <a class="i18n-able" href="#" id="prefs-reset" data-i18n-id="page:prefs-reset"></a>
+            <button class="i18n-able" href="#" id="prefs-reset" data-i18n-id="page:prefs-reset"></button>
+
+            <button class="i18n-able" href="#" id="prefs-import" data-i18n-id="page:prefs-import"></button>
+
+            <button class="i18n-able" href="#" id="prefs-export" data-i18n-id="page:prefs-export"></button>
           </div>
 
         </div>
