--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </header>
       </div>
 
-      <div class="grid-item" id="cell-log" role="complementary">
-        event logs<br />appear<br />here
+      <div class="grid-item" id="cell-stat-left" role="complementary">
+        inventory<br />appears<br />here
       </div>
 
       <div class="grid-item" id="cell-result">
